--- a/mbspotify/config.py.example
+++ b/mbspotify/config.py.example
@@ -1,3 +1,6 @@
 # PostgreSQL connection string
 # See http://www.postgresql.org/docs/current/static/libpq-connect.html#LIBPQ-CONNSTRING
 PG_CONNECT = "dbname=mbspotify user=mbspotify host=localhost port=5432"
+
+# Key that is used to verify incoming requests
+KEY = "CHANGE_ME"
