--- a/mbspotify/config.py.example
+++ b/mbspotify/config.py.example
@@ -2,5 +2,7 @@
 # See http://www.postgresql.org/docs/current/static/libpq-connect.html#LIBPQ-CONNSTRING
 PG_CONNECT = "dbname=mbspotify user=mbspotify host=localhost port=5432"
 
-# Key that is used to verify incoming requests
-KEY = "CHANGE_ME"
+# List of keys that is used to verify incoming requests
+ACCESS_KEYS = [
+    "CHANGE_ME",
+    ]
