--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 Flask == 0.10.1
 Flask-Jsonpify == 1.3
+Flask-Testing == 0.4.2
+nose == 1.3.3
 Jinja2 == 2.7.2
 MarkupSafe == 0.23
 Werkzeug == 0.9.4
