--- a/mbspotify/config.py.example
+++ b/mbspotify/config.py.example
@@ -6,7 +6,8 @@ ACCESS_KEYS = [
     "CHANGE_ME",
 ]
 
-# Settings defined below have default values in default_config.py, but can be overridden in this file.
+# Settings defined below have default values in default_config.py, but can be
+# overridden in this file.
 
 # PostgreSQL connection string
 # See http://www.postgresql.org/docs/current/static/libpq-connect.html#LIBPQ-CONNSTRING
