--- a/mbspotify/config.py.example
+++ b/mbspotify/config.py.example
@@ -13,6 +13,9 @@ ACCESS_KEYS = [
 # See http://www.postgresql.org/docs/current/static/libpq-connect.html#LIBPQ-CONNSTRING
 #PG_CONNECT = "dbname=mbspotify user=mbspotify password= host=localhost port=5432"
 
+#PG_PORT = 5432
+#PG_SUPER_USER = "postgres"
+
 # Number of votes required to delete a mapping
 THRESHOLD = 4
 
