--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-Flask == 0.10.1
-Flask-Testing == 0.4.2
-MarkupSafe == 0.23
-Werkzeug == 0.9.6
-itsdangerous == 0.24
-psycopg2 == 2.6
-raven == 5.1.1
-nose == 1.3.4
+Flask==0.10.1
+Flask-Testing==0.4.2
+MarkupSafe==0.23
+Werkzeug==0.9.6
+itsdangerous==0.24
+psycopg2==2.6
+raven[flask]==5.13.0
+nose==1.3.4
