--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-Flask==0.10.1
+git+https://github.com/metabrainz/python-brainzutils.git@596bf8899b7a213f64d09ce7c94a7f25cfd51107
 Flask-Testing==0.4.2
 MarkupSafe==0.23
-Werkzeug==0.9.6
-itsdangerous==0.24
 psycopg2==2.6
-raven[flask]==5.13.0
 nose==1.3.4
+click==6.6
