--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 git+https://github.com/metabrainz/python-brainzutils.git@596bf8899b7a213f64d09ce7c94a7f25cfd51107
-Flask-Testing==0.4.2
+Flask-Testing==0.5.0
 MarkupSafe==0.23
 psycopg2==2.6
-nose==1.3.4
 click==6.6
+pytest==2.9.2
+pytest-cov==2.3.0
