Add Sentry logging into config

--- a/docker/config/MBSpotify/config.prod.json
+++ b/docker/config/MBSpotify/config.prod.json
@@ -1,4 +1,5 @@
 {
   "threshold": "4",
-  "access_keys": "[\"example1\", \"example2\"]"
+  "access_keys": "[\"example1\", \"example2\"]",
+  "sentry_dsn_private": ""
 }
