--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -11,7 +11,7 @@ services:
       PGDATA: /var/lib/postgresql/data/pgdata
 
   web:
-    build: .
+    build: ..
     ports:
       - "80:8080"
     depends_on:
