More fixes to Docker Compose files

--- a/docker/docker-compose.consul.yml
+++ b/docker/docker-compose.consul.yml
@@ -23,6 +23,7 @@ services:
         dockerfile: ./Dockerfile
     environment:
       DEPLOY_ENV: prod
+      CONSUL_HOST: git2consul
     volumes:
       - ../:/code
       - ../data/app:/data
